a purpose for which no one ever uses it.
----------------------------------------------------------------------
Thu Jun 14 20:23:56 2001                        Michael Jennings (mej)

For the sake of paranoia, Avalon tools will now enforce a umask of
0022.
----------------------------------------------------------------------
Mon Jun 18 10:18:21 2001                        Michael Jennings (mej)

Better handling of commits inside modules.
----------------------------------------------------------------------
Wed Jul 18 15:45:06 2001                        Michael Jennings (mej)

The auto-magical fetching of the products directory, which I'm not
sure ever actually worked, is now gone.  I also added an option to
buildtool for specifying an alternative userid (more important for
myself and the Canadian than anyone else) for get's, and an option to
srctool for disabling interaction with the repository.  I fixed
Bug #1318 filed by Jay; srctool (avpatch) now properly ignores *.orig
and *.rej when generating patch files.  Other minor issues were fixed,
but nothing that should show up on radar.  Finally, I added the
beginnings of an Avalon FAQ in SGML format.
----------------------------------------------------------------------
Fri Jul 20 08:15:14 2001                        Michael Jennings (mej)

This is a WIP.  Don't use it.
----------------------------------------------------------------------
Fri Jul 20 13:30:18 2001                        Michael Jennings (mej)

Oh look.  It can check stuff out again.  Yay.
----------------------------------------------------------------------
Mon Jul 23 19:22:43 2001                        Michael Jennings (mej)

Still working on rearranging things....
----------------------------------------------------------------------
Tue Jul 24 19:59:05 2001                        Michael Jennings (mej)

Now we just have to get somewhere.... :P
----------------------------------------------------------------------