@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgtool,v 1.41 2001/07/24 02:21:11 mej Exp $
+# $Id: pkgtool,v 1.42 2001/07/26 03:13:50 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -495,7 +495,7 @@ main
 
     # Set up the basic variables
     $progname = "pkgtool";
-    $version = "2.0";
+    $version = "2.1";
     &print_usage_info() if (!scalar(@ARGV));
     umask 022;
 
@@ -511,7 +511,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.41 $ created on $Date: 2001/07/24 02:21:11 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.42 $ created on $Date: 2001/07/26 03:13:50 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
