@@ -1309,3 +1309,7 @@ Tue Jul 24 19:59:05 2001                        Michael Jennings (mej)
 
 Now we just have to get somewhere.... :P
 ----------------------------------------------------------------------
+Wed Jul 25 20:15:25 2001                        Michael Jennings (mej)
+
+Working on the new build hierarchy.  Details to follow....
+----------------------------------------------------------------------
